--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,3 @@
-<div class="m-1">
-    <h1>Game of Thrones Wiki by forri</h1>
-    <div>
-        <button routerLink="/houses" class="m-2 col-2 ">Houses </button>
-        <button routerLink="/characters" class="m-2 col-2 ">Characters </button>
-        <button routerLink="/books" class="m-2 col-2 ">Books </button>
-    </div>
-    
-    <router-outlet></router-outlet>
-</div>
+
+<toolbar></toolbar>
+<router-outlet></router-outlet>
