--- a/src/app/components/characters/characters.component.html
+++ b/src/app/components/characters/characters.component.html
@@ -1,3 +1,8 @@
-<div *ngFor = "let character of characters | async">
-    <h3>{{character.name}} {{character.aliases[0]}} {{character.url}}</h3>
-</div>
+
+<mat-nav-list>
+    <mat-list-item *ngFor="let character of characters | async" [activated]="selectedCharacter === character" (click) = "selectedCharacter = character">
+        <span matListItemTitle> {{character.aliases[0]}}</span>
+        <span matListItemLine> Name: {{character.name}}</span>
+        <span matListItemLine> Played by: {{character.playedBy}}</span>
+    </mat-list-item>
+</mat-nav-list>
