--- a/src/app/components/houses/houses.component.html
+++ b/src/app/components/houses/houses.component.html
@@ -1,3 +1,8 @@
-<div *ngFor="let house of houses | async">
-    <h4>{{house.name}} "{{house.words}}" {{house.currentLord}}</h4>
-</div>
+<mat-nav-list>
+    <mat-list-item *ngFor="let house of houses | async" [activated]="selectedHouse === house"
+        (click)="selectedHouse = house" [routerLink]="['/houses', house.url]">
+        <span matListItemTitle> {{house.name}} </span>
+        <span matListItemLine> Words: {{house.words}}</span>
+        <span matListItemLine> current Lord: {{house.currentLord}}</span>
+    </mat-list-item>
+</mat-nav-list>
