--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,16 +1,17 @@
 <mat-toolbar>
-    <button mat-icon-button [mat-menu-trigger-for]="menu" class="example-icon"
-        aria-label="Example icon-button with menu icon">
-        <mat-icon>menu</mat-icon>
-    </button>
-    <mat-menu #menu="matMenu">
-        <button mat-menu-item routerLink="/houses">Houses </button>
-        <button mat-menu-item routerLink="/characters">Characters </button>
-        <button mat-menu-item routerLink="/books">Books </button>
-    </mat-menu>
-    <span>Game of Thrones Wiki by forri</span>
-
+    <mat-toolbar-row>
+        <div class="first-line">
+            
+            <mat-menu #menu="matMenu">
+                <button mat-menu-item routerLink="/houses">Houses </button>
+                <button mat-menu-item routerLink="/characters">Characters </button>
+                <button mat-menu-item routerLink="/books">Books </button>
+            </mat-menu>
+            <span>Game of Thrones Wiki by Forri</span>
+            <button mat-icon-button [mat-menu-trigger-for]="menu" class="example-icon"
+                aria-label="Example icon-button with menu icon">
+                <mat-icon>menu</mat-icon>
+            </button>
+        </div>
+    </mat-toolbar-row>
 </mat-toolbar>
-<div>
-
-</div>
