--- a/src/app/components/book-details/book-details.component.html
+++ b/src/app/components/book-details/book-details.component.html
@@ -1,1 +1,29 @@
-<p>book-details works!</p>
+
+
+<mat-card *ngIf="book">
+    <mat-card-header>
+        <h3>{{book.name}}</h3>
+    </mat-card-header>
+    <mat-card-content>
+        <p *ngIf="book.country">Country: {{book.country}}</p>
+        <p *ngIf="book.mediaType">Media type: {{book.mediaType}}</p>
+        <p *ngIf="book.numberOfPages">Number of pages: {{book.numberOfPages}}</p>
+        <p *ngIf="book.released">Released: {{book.released}}</p>
+        <p *ngIf="book.publisher">Publisher: {{book.publisher}}</p>
+        <p *ngIf="book.isbn">ISBN: {{book.isbn}}</p>
+        <p *ngIf="book.authors.length==1"> Author: {{book.authors}}</p>
+        
+        <mat-expansion-panel *ngIf="book.authors.length!=1">
+            <mat-expansion-panel-header>Authors:</mat-expansion-panel-header>
+            <p *ngFor="let author of book.authors"></p>
+        </mat-expansion-panel>
+        <mat-expansion-panel *ngIf="characters?.length">
+            <mat-expansion-panel-header>Characters:</mat-expansion-panel-header>
+            <p *ngFor="let character of characters">{{character.name || character.aliases[0] || 'Unknown'}}</p>
+        </mat-expansion-panel>
+        <mat-expansion-panel *ngIf="povCharacters?.length">
+            <mat-expansion-panel-header>Characters who had a POV chapter:</mat-expansion-panel-header>
+            <p *ngFor="let character of povCharacters">{{character.name || character.aliases[0] || 'Unknown'}}</p>
+        </mat-expansion-panel>
+    </mat-card-content>
+</mat-card>
