--- a/src/app/components/character-details/character-details.component.html
+++ b/src/app/components/character-details/character-details.component.html
@@ -1,18 +1,23 @@
+
+
+
+
 <mat-card *ngIf="character">
     <mat-card-header>
         <h3>{{character.name || character.aliases[0] || 'character has no name'}}</h3>
     </mat-card-header>
     <mat-card-content>
-        <p *ngIf="character.born">{{character.born}}</p>
-        <p *ngIf="character.culture">{{character.culture}}</p>
-        <p *ngIf="character.died">{{character.died}}</p>
-        <p *ngIf="character.father">{{father}}</p>
-        <p *ngIf="mother">{{mother.name || mother.aliases[0] || 'has no name'}}</p>
-        <p *ngIf="spouse">{{spouse.name || spouse.aliases[0] || 'has no name'}}</p>
+        <p *ngIf="character.born">Born: {{character.born}}</p>
+        <p *ngIf="character.culture">Culture: {{character.culture}}</p>
+        <p *ngIf="character.gender">Gender: {{character.gender}}</p>
+        <p *ngIf="character.died">Died: {{character.died}}</p>
+        <p *ngIf="father">Father: {{father.name}}</p>
+        <p *ngIf="mother">Mother: {{mother.name || mother.aliases[0] || 'has no name'}}</p>
+        <p *ngIf="spouse">Spouse: {{spouse.name || spouse.aliases[0] || 'has no name'}}</p>
         <p *ngIf="character.playedBy.length==1">Played by: {{character.playedBy[0]}}</p>
         <p *ngIf="character.aliases.length==1">Alias: {{character.aliases[0]}}</p>
         <p *ngIf="books.length==1">Book: {{books[0].name}}</p>
-        <p *ngIf="povBooks.length==1">Books they had a pov chapter in: {{povBooks[0]}}</p>
+        <p *ngIf="povBooks.length==1">Books they had a pov chapter in: {{povBooks[0].name}}</p>
         <p *ngIf="character.titles.length==1">Title: {{character.titles[0]}}</p>
         <p *ngIf="character.tvSeries.length==1">Season: {{character.titles[0]}}</p>
         <p *ngIf="allegiances.length==1">Allegience: {{allegiances[0].name}}</p>
@@ -29,7 +34,7 @@
         </mat-expansion-panel>
         <mat-expansion-panel *ngIf="character.titles.length>1">
             <mat-expansion-panel-header>Titles:</mat-expansion-panel-header>
-            <p *ngFor="let actor of character.playedBy">{{actor}}</p>
+            <p *ngFor="let title of character.titles">{{title}}</p>
         </mat-expansion-panel>
         <mat-expansion-panel *ngIf="character.playedBy.length>1">
             <mat-expansion-panel-header>Played by:</mat-expansion-panel-header>
