--- a/src/app/components/houses/houses.component.html
+++ b/src/app/components/houses/houses.component.html
@@ -1,8 +1,16 @@
+<mat-toolbar>
+    <div class="justify-content-between align-items-center d-flex w-100">
+        <span>Houses</span>
+        <button mat-icon-button (click)="openFilters()"><mat-icon>filter_list</mat-icon></button>
+    </div>
+</mat-toolbar>
+
 <mat-nav-list>
-    <h1>Houses</h1>
-    <mat-list-item *ngFor="let house of houses | async" [activated]="selectedHouse === house"
-        (click)="selectedHouse = house" [routerLink]="['/houses', house.url]">
+    <mat-list-item *ngFor="let house of houses" [routerLink]="['/houses', house.url]">
         <span matListItemTitle> {{house.name}} </span>
         <span matListItemLine> Region: {{house.region}}</span>
     </mat-list-item>
 </mat-nav-list>
+<mat-paginator #paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 25, 50]"
+    aria-label="Select page" (page)="pageEvent($event)">
+</mat-paginator>
